--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
+<!-- what are you looking for, dude? -->
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="og:title" property="og:title" content="Rodrigo Ventura | Front End eveloper | Web Developer">
+    <meta name="og:description" property="og:description" content="Freelance Front End Developer and WordPress.">
+    <meta name="description" content="Freelance Front End Developer and WordPress.">
+    <meta name="robots" content="index, follow">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -9,7 +14,6 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +28,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>RodrigoPV | Front End Developer</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FXKQQVEV4F"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'G-FXKQQVEV4F');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
